Fix spacing problem. Tidy the CSS.

--- a/styles/module.css
+++ b/styles/module.css
@@ -1,3 +1,5 @@
+/* Scene Button */
+
 li.scene-control[data-control="table-ninja"], li.scene-control[data-control="table-ninja"] i {
     display: flex;
     height: 36px;
@@ -5,6 +7,24 @@ li.scene-control[data-control="table-ninja"], li.scene-control[data-control="tab
     justify-content: center;
     align-items: center;
 }
+
+/* Main */
+
+#table-ninja-prime .window-content {
+    padding: 0;
+}
+.table-ninja-content {
+    padding: 10px 10px 50px 10px;
+}
+.table-ninja-content, .table-ninja-group {
+    align-content: flex-start;
+    flex-direction: row;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+/* Groups */
+
 .table-ninja-group {
     padding: 5px;
     background-color: rgba(200, 200, 200, 0.5);
@@ -22,6 +42,17 @@ li.scene-control[data-control="table-ninja"], li.scene-control[data-control="tab
 }
 .table-ninja-group .table-ninja-group h2 {
     border-color: #888;
+}
+
+/* Tables */
+
+.table-ninja-result {
+    margin: 0 15px 5px 0;
+    padding-bottom: 5px;
+    width: 200px;
+    position: relative;
+    overflow: hidden;
+    max-height: 100px;
 }
 .table-ninja-select {
     text-indent: -200em;
@@ -43,32 +74,10 @@ li.scene-control[data-control="table-ninja"], li.scene-control[data-control="tab
     display: inline-block;
     font-weight: bold;
 }
-.table-ninja-result {
-    margin: 0 15px 5px 0;
-    padding-bottom: 5px;
-    width: 200px;
-    position: relative;
-    overflow: hidden;
-    max-height: 100px;
-}
 .table-ninja-result:last-child {
     margin-bottom: 0;
     padding-bottom: 0;
     border-bottom: none;
-}
-.table-ninja-read-more:hover {
-    color: #888;
-}
-#table-ninja-prime .window-content {
-    padding: 0;
-}
-.table-ninja-content {
-    padding: 10px 10px 50px 10px;
-}
-.table-ninja-content, .table-ninja-group {
-    flex-direction: row;
-    display: flex;
-    flex-wrap: wrap;
 }
 .table-ninja-results-header {
     white-space: nowrap;
@@ -81,7 +90,7 @@ li.scene-control[data-control="table-ninja"], li.scene-control[data-control="tab
     background-color: #333;
     padding: 8px 25px;
 }
-.overflowing {
+.table-ninja-overflowing {
     -webkit-mask-image: linear-gradient(to bottom, black 50%, transparent 100%);
     mask-image: linear-gradient(to bottom, black 50%, transparent 100%);
 }
